version 2.1.1 fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ h2,h3,h4,h5,h6{ margin: 0}
 
 .wrap{background-color: #fff;position: relative; left: 0;width: 100%; height: 100%;overflow-x: hidden;transition:left 0.4s,height 0.4s,margin 0.4s;}
 .wrap.scale{left: 200px;height: 90%;margin-top: 20px;}
-.inner-wrap{width: 100%; height: 1000px;padding-right: 50px;text-align: center;}
+.inner-wrap{width: 100%; height: 1000px;padding-right: 50px;text-align: center; overflow-x:hidden;}
 .aside{position: fixed; left: -200px; top: 0px;width: 200px; height: 100%;transition:left 0.4s;background-color: #000;}
 .aside.active{left: 0px;}
 .aside .center-line{position: absolute; width: 1px; height: 80%;top: 10%; left: 40px; background-color: #fff;}
